Modify RestaurantRepositoryTest.java: add RestaurantRepository test